k8s/home/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  labels:
    app: home
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: anshulg-com
    tags.datadoghq.com/version: 0.3.4
spec:
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: "50%"
      maxUnavailable: "50%"
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      name: home
      labels:
        app: home
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: anshulg-com
        tags.datadoghq.com/version: 0.3.4
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/js-lib.version: v5.56.0
    spec:
      containers:
        - name: home
          image: ghcr.io/ansg191/anshulg-com:0.4.2@sha256:ba69e4f74fae439f0485175241e99644b8e1cf3f81f1e1f6c5acfec6ee858733
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4321
              protocol: TCP
              name: http
          resources:
            requests:
          #    cpu: 250m
              memory: 64Mi
            limits:
              memory: 128Mi
          livenessProbe:
            httpGet:
              port: http
              path: /
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              port: http
              path: /
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      restartPolicy: Always
