k8s/home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home
spec:
  selector:
    app: home
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
