k8s/home/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`anshulg.com`) && Path(`/`)
      middlewares:
        - name: cache-override
          namespace: home
        - name: security-headers
          namespace: home
        - name: compression
          namespace: home
      services:
        - name: home
          port: 80
    - kind: Rule
      match: Host(`anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: home
        - name: compression
          namespace: home
      services:
        - name: home
          port: 80
    - kind: Rule
      match: Host(`www.anshulg.com`)
      middlewares:
        - name: www-to-root-redirect
          namespace: home
      services:
        - name: home
          port: 80
  tls:
    secretName: home-cert-tls
    domains:
      - main: anshulg.com
        sans:
          - www.anshulg.com
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compression
spec:
  compress: {}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cache-override
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "public, max-age=3600, stale-while-revalidate=86400"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: security-headers
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: www-to-root-redirect
spec:
  redirectRegex:
    regex: ^https?://www\.anshulg\.com/(.*)
    replacement: https://anshulg.com/${1}
    permanent: true
